added seeders + env vars

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,16 +2,17 @@
 spring.application.name=spring_pizzeriacrud
 
 #data source mysql, test access w console  mysql -u NelvisonBenedettoMySQL -p -P 3308 -h localhost
-spring.datasource.url=jdbc:mysql://localhost:3308/myspringlibrary
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3308/db_springpizzeria
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #hibernate properties
 #the sql dialect(here dialect chosen MySQL8) makes hibernate generate better sql for target db
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #hibernate ddl auto(create(inizio sessione distruzione all creazione all(upload import.sql if exists)), create-drop(create+delete all end session), validate(se lo schema non corrisponde alle entita, error), update(edit+add functs, cannot delete tabs/cols), none(hibernate cannot manages ur schema anymore) )
-spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.hibernate.ddl-auto=create-drop   
+    #set CREATE x the firsts builds!!!
 #spring.jpa.generate-ddl=false  #same result w spring.jpa.hibernate.ddl-auto=none
     #hibernate cannot manages ur schema anymore, u can still make CRUD operations on existing rows, utilizzato in Azienda x non edit schema/w Flyway(x business manual db migrations)
 
