--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #hibernate ddl auto(create(inizio sessione distruzione all creazione all(upload import.sql if exists)), create-drop(create+delete all end session), validate(se lo schema non corrisponde alle entita, error), update(edit+add functs, cannot delete tabs/cols), none(hibernate cannot manages ur schema anymore) )
-spring.jpa.hibernate.ddl-auto=create-drop   
+spring.jpa.hibernate.ddl-auto=create   
     #set CREATE x the firsts builds!!!
 #spring.jpa.generate-ddl=false  #same result w spring.jpa.hibernate.ddl-auto=none
     #hibernate cannot manages ur schema anymore, u can still make CRUD operations on existing rows, utilizzato in Azienda x non edit schema/w Flyway(x business manual db migrations)
