setted all pizzas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=spring_pizzeriacrud
 
 #data source mysql, test access w console  mysql -u NelvisonBenedettoMySQL -p -P 3308 -h localhost
 spring.datasource.url=jdbc:mysql://localhost:3308/db_springpizzeria
+   #CHANGE HERE NAME DB IN UR NEW PROJECTS!!!
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
