added update reviews + modals + fixed pizza filter logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,8 @@ spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.generate-ddl=false  #same result w spring.jpa.hibernate.ddl-auto=none
     #hibernate cannot manages ur schema anymore, u can still make CRUD operations on existing rows, utilizzato in Azienda x non edit schema/w Flyway(x business manual db migrations)
 
+spring.mvc.hiddenmethod.filter.enabled=true
+    #now spring can transform POST method to DELETE/PUT using the hidden field  _method=.... 
 
 #date formatting
 spring.mvc.format.date=yyyy-MM-dd
@@ -24,5 +26,5 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
 #x debug view in console
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
