--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,6 @@ spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
-#x debug view in console
+#!x debug view in console
 # spring.jpa.show-sql=true
 # spring.jpa.properties.hibernate.format_sql=true
